# indoor-sensors

./: .gitmodules  Cargo.toml  README.md  build.rs  deploy.sh  log4rs.yml
debian/: postinst  preinst  prerm
mosquitto/: libc-ares-dev_1.12.0-1+deb9u1_armhf.deb  libc-ares2_1.12.0-1+deb9u1_armhf.deb  libmosquitto-dev_1.4.10-3+deb9u1_armhf.deb  libmosquitto1_1.4.10-3+deb9u1_armhf.deb  libssl-dev_1.1.0f-3+deb9u2_armhf.deb
mosquitto/usr/lib/arm-linux-gnueabihf/: libcares.so.2.2.0  libmosquitto.so.1
mosquitto/usr/lib/arm-linux-gnueabihf/pkgconfig/: libcares.pc
src/: main.rs
src/threads/: as3935.rs  bmp280.rs  geiger.rs  htu21d.rs  mod.rs  radiothermostat.rs  sds011.rs  sgp30.rs
systemd/: indoor_sensors.service
