[package]
name = "indoor_sensors"
version = "0.1.0"
authors = ["Edward Welch <ed@oqqer.com>"]

[dependencies]
log = "0.4.3"
fern = "0.5.6"
chrono = "0.4.4"

sensor_lib = { path = "../sensor_lib" }
htu21d = { path = "../htu21d" }
embedded-hal = "0.2.1"
linux-embedded-hal = "0.2.0"

mosquitto-client = "0.1.4"

serde = "1.0.70"
serde_derive = "1.0.70"
serde_yaml = "0.7"
serde_json = "1.0.24"

dtoa = "0.4.2"
