[package]
name = "indoor_sensors"
version = "0.1.0"
authors = ["Edward Welch <ed@oqqer.com>"]

[dependencies]
log = "0.4.3"
fern = "0.5.6"
chrono = "0.4.4"

sensor_lib = { path = "../sensor_lib" }
htu21d = { path = "../htu21d" }
sgp30 = "0.2.0"
embedded-hal = "0.2.1"
linux-embedded-hal = "0.2.0"

mosquitto-client = "0.1.4"

serde = "1.0.70"
serde_derive = "1.0.70"
serde_yaml = "0.7"
serde_json = "1.0.24"

dtoa = "0.4.2"

[package.metadata.deb]
maintainer = "Ed <ed@oqqer.com>"
copyright = "2017, oqqer.com <ed@oqqer.com>"
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/indoor_sensors", "usr/bin/", "755"],
    ["systemd/indoor_sensors.service", "/lib/systemd/system/indoor_sensors.service", "644"],
    #NOTE this is a submodule! if you cloned this project and can't find this file run git submodule init
    ["sensor_lib/sensors/sensors.yml", "/etc/indoor_sensors/sensors.yml", "644"],
]